--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Debug
         run: pwd
 
+      - name: Move to checkouted directory
+        run: cd ${{ runner.workspace }}/secevsubid
+
       - name: Build
         run: go build -v ./...
         env:
