--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,15 +28,12 @@ jobs:
         env:
           GOPATH: ${{ runner.workspace }}/secevsubid
 
-      - name: Debug
-        run: pwd
-
       - name: Build
-        run: go build -v ./...
+        run: cd ${{ runner.workspace }}/secevsubid/src/github.com/pinzolo/secevsubid && go build -v ./...
         env:
           GOPATH: ${{ runner.workspace }}/secevsubid
 
       - name: Execute tests
-        run: go test -v ./...
+        run: cd ${{ runner.workspace }}/secevsubid/src/github.com/pinzolo/secevsubid && go test -v ./...
         env:
           GOPATH: ${{ runner.workspace }}/secevsubid
