--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,14 +26,14 @@ jobs:
         with:
           go-version: 1.18
         env:
-          GOPATH: ${{ runner.workspace }}/secevsubid
+          GOPATH: ${{ github.workspace }}
 
       - name: Build
-        run: cd ${{ runner.workspace }}/secevsubid/src/github.com/pinzolo/secevsubid && go build -v ./...
+        run: cd ${{ github.workspace }}/src/github.com/pinzolo/secevsubid && go build -v ./...
         env:
-          GOPATH: ${{ runner.workspace }}/secevsubid
+          GOPATH: ${{ github.workspace }}
 
       - name: Execute tests
-        run: cd ${{ runner.workspace }}/secevsubid/src/github.com/pinzolo/secevsubid && go test -v ./...
+        run: cd ${{ github.workspace }}/src/github.com/pinzolo/secevsubid && go test -v ./...
         env:
-          GOPATH: ${{ runner.workspace }}/secevsubid
+          GOPATH: ${{ github.workspace }}
